--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
       margin: 0;
       overflow: none;
     }
+    #logo{
+      position: absolute;
+      transform: translate(-50%,-50%);
+      top: 50%;
+      left: 50%;
+      width: 500px;
+      height: 500px;
+    }
   </style>
   <script src="./addons/p5.js"></script>
   <script src="sketch.js"></script>
@@ -18,6 +26,7 @@
 
 <body>
   <main>
+    <div id="logo"></div>
   </main>
 </body>
 
