--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Generative LdC Logo</title>
+  <title>LdC Logo Generator</title>
   <style>
     body {
       padding: 0;
@@ -14,10 +14,10 @@
     #logo{
       position: absolute;
       transform: translate(-50%,-50%);
-      top: 50%;
+      top: 45%;
       left: 50%;
-      width: 500px;
-      height: 500px;
+      width: 600px;
+      height: 600px;
     }
   </style>
   <script src="./addons/p5.js"></script>
