--- a/index.html
+++ b/index.html
@@ -5,29 +5,43 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LdC Logo Generator</title>
-  <style>
-    body {
-      padding: 0;
-      margin: 0;
-      overflow: none;
-    }
-    #logo{
-      position: absolute;
-      transform: translate(-50%,-50%);
-      top: 45%;
-      left: 50%;
-      width: 600px;
-      height: 600px;
-    }
-  </style>
+  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.js'></script>
+  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.css' rel='stylesheet' />
+  <script src='https://code.jquery.com/jquery-3.4.1.min.js'></script>
+  <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
+  <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css" type="text/css"/>
+  <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js"></script>
   <script src="./addons/p5.js"></script>
-  <script src="sketch.js"></script>
 </head>
 
 <body>
   <main>
     <div id="logo"></div>
+    <div id="map"></div>
   </main>
 </body>
-
+<style>
+  body {
+    padding: 0;
+    margin: 0;
+    overflow: none;
+  }
+  #map{
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 50%;
+    height: 100%;
+  }
+  #logo{
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 45%;
+    left: 25%;
+    width: 600px;
+    height: 600px;
+  }
+</style>
+<script src="sketch.js"></script>
 </html>
