added checkbox no text

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
   button {
     border-radius: 20px;
   }
-  #p5_loading img {
-    position: absolute;
-    top: 5.8%;
-    left: -0.7%;
+  label {
+    font-family: folio;
+    font-size: 14px;
+    color: #666;
   }
 </style>
 <script src="sketch.js"></script>
