--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     left: 50%;
     width: 50%;
     height: 100%;
+    opacity: 1;
   }
 
   #logo {
@@ -83,6 +84,61 @@
     font-family: folio;
     font-size: 14px;
     color: #666;
+  }
+
+  @media (max-width: 480px) {
+    main{
+      overflow: none;
+    }
+
+    #map {
+      position: absolute;
+      opacity: 0.99;
+      top: 32.5%;
+      left: 0;
+      width: 100%;
+      height: 51%;
+    }
+
+    #logo {
+      position: absolute;
+      transform: translate(-50%, -5%);
+      top: 0;
+      left: 50%;
+      width: 300px;
+      height: 300px;
+    }
+
+    button {
+      border-radius: 5px;
+    }
+    label {
+      font-family: folio;
+      font-size: 17px;
+      color: #666;
+    }
+    select, button {
+      border: 0px;
+      font-family: folio;
+      font-size: 17px;
+      color: #666;
+      background-color: white;
+      box-shadow: 0 3px 15px rgba(0, 0, 0, 0.2);
+      transition: 0.5s;
+      cursor: pointer;
+      text-align: center;
+      padding-top: 5px;
+    }
+  }
+  @media (max-height: 700px) {
+    #logo {
+      position: absolute;
+      transform: translate(-50%, -10%);
+      top: 0;
+      left: 50%;
+      width: 300px;
+      height: 300px;
+    }
   }
 </style>
 <script src="sketch.js"></script>
