--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
   <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js"></script>
   <script src="./addons/p5.js"></script>
+  <script src="./detectmobilebrowser.js"></script>
 </head>
 
 <body>
@@ -27,7 +28,7 @@
 <style>
   @font-face {
     font-family: folio;
-    src: url('assets/FolioStd-Light.otf');
+    src: url('./assets/DMSans-Regular.ttf');
   }
 
   body {
